--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -1506,5 +1506,238 @@ covid_fe <- felm(
   data = most_recent)
 
 ```
+```{r}
+# Re-running these regressions, scaling to standard deviations -- we first scale
+# everything by its standard deviation
 
+most_recent_sd <- most_recent %>%
+  mutate_at(c("business_days",
+              "median_family_income",
+              "minority_percent",
+              "high_school_pct",
+              "married_percent",
+              "male_percent",
+              "cook_pvi",
+              "estimate_gini_index",
+              "violent_crime_rate",
+              "renter_percent",
+              "banks_per_pop",
+              "businesses_per_pop",
+              "payroll",
+              "unemployment_rate",
+              "unemployment_rate_apr",
+              "mean_start_cases_weighted",
+              "mean_start_deaths_weighted",
+              "mean_end_cases_weighted",
+              "mean_end_deaths_weighted"), 
+            ~ scale(., center = TRUE, scale = TRUE))
+```
+
+
+```{r}
+
+# And now we run the regressions for ZIP
+
+covid_fe <- felm(
+  business_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent + 
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate + 
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|fips + lender|0|zip,
+  data = most_recent_sd)
+
+# Regression 5: Squared
+
+sq <- felm(
+  business_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent + 
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate + 
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(minority_percent^2)|fips + lender|0|zip,
+  data = most_recent_sd)
+```
+
+```{r}
+# Do the same thing on the county level
+
+most_recent_county <- readRDS('most_recent_county_nobanks_ownership.rds') %>%
+  mutate(lender = as.factor(lender), fips = as.factor(fips)) %>%
+  mutate_at(c("business_days",
+              "median_income",
+              "percent_minority_biz",
+              "high_school_pct",
+              "married_percent",
+              "male_percent",
+              "republican_percent",
+              "pop_den",
+              "estimate_gini_index",
+              "violent_crime_rate",
+              "renter_percent",
+              "banks_per_pop",
+              "businesses_per_pop",
+              "gdp",
+              "unemployment_rate_percent",
+              "unemployment_rate_apr",
+              "mean_start_cases",
+              "mean_start_deaths",
+              "mean_end_cases",
+              "mean_end_deaths"), 
+            ~ scale(., center = TRUE, scale = TRUE))
+```
+
+```{r}
+county_covid <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz +
+    
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|lender|0|fips, 
+    data = most_recent_county
+)
+
+county_sq <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz +
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(percent_minority_biz^2)|lender|0|fips, 
+    data = most_recent_county
+)
+```
+
+
+
+```{r}
+# One more check -- I want to see if minority business ownership is significnant
+# controlling for population
+
+county_covid_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + minority_percent + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|lender|0|fips, 
+    data = most_recent_ownership_county
+)
+```
 
