Adding in a control for minority population

--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -1705,7 +1705,7 @@ county_sq <- felm(business_days ~ 1 +
 
 
 ```{r}
-# One more check -- I want to see if minority business ownership is significnant
+# One more check -- I want to see if minority business ownership is significant
 # controlling for population
 
 county_covid_biz <- felm(business_days ~ 1 + 
