Even more comments

--- a/1_zip_data_cleaning.Rmd
+++ b/1_zip_data_cleaning.Rmd
@@ -13,6 +13,9 @@ library(lubridate)
 # This is our initial data cleaning. We add in some basic demographic data
 # and create our full dataset of loans.
 
+# For whoever's grading this for Gov 50 if applicable -- please be a bit 
+# forgiving of lack of comments in some of these files ...
+
 ```
 
 ```{r}
@@ -34,6 +37,10 @@ ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
 ```
 
 ```{r}
+
+# Function for cleaning a bunch of identically set up csv files for each
+# state's PPP policy
+
 sba_cleaning <- function(file) {
   x <- read_csv(file, col_types = cols()) %>%
     clean_names() %>%
@@ -49,11 +56,13 @@ sba_cleaning <- function(file) {
 
 ```{r}
 # run for Mac
+
 file.names1 <- 
   dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", 
       pattern = ".csv")
 
 # run for Windows
+
 file.names2 <- 
   dir(path = "C:/Justin/Gov50/pppdata/raw_data/sba/states/", pattern = ".csv")
 ```
@@ -71,6 +80,8 @@ for(i in 1:length(file.names2)) {
 
 
 ```{r}
+# Matching up the cols so we can do an rbind
+
 all_states2 <- all_states %>%
   mutate(loan_range = "less than 150k", address = NA)
 
